# barcode_validator

./: .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  barcode-validator.service  barcode-validator.sh  cox1.fasta  env.sh  environment.yml  nhm_run.sh  pyproject.toml  requirements.txt  run-barcode-validator.sh  run.sh  tool.xml  triage_all.sh  triage_all_local.sh
barcode_validator/: __main__.py  _version.py  alignment.py  barcode_io.py  barcode_validator.py  blast_runner.py  cli.py  config.py  constants.py  core.py  criteria.py  csc_batch_validator.py  daemon.py  dna_analysis_result.py  github.py  non_coding_validator.py  orchestrator.py  persistence.py  protein_coding_validator.py  provenance.py  result.py  sequence_handler.py  structural_validator.py  taxonomic_enrichment.py  taxonomic_validator.py  taxonomy.py  taxonomy_resolver.py  translation_tables.py  triage-sweep-local.py  triage.py  triage_sweep.py
config/: config.yml
data/: 2024-08-26 BGE chironomids NOT UPLOADED to BOLD.fasta  2024-08-26 BGE chironomids NOT UPLOADED to BOLD.fasta.tsv  2024-08-26 BGE chironomids uploaded to BOLD.fasta  2024-08-26 BGE chironomids uploaded to BOLD.fasta.tsv  BGE00001_00002_skim2phylo_cox1.fasta  BGE00100_MGE-BGE_r1_1.3_1.5_s50_100.fasta  BGE00100_MGE-BGE_r1_1.3_1.5_s50_100.fasta.tsv  BGE00101_MGE-BGE_r1_1.3_1.5_s50_100.fasta  BGE00101_MGE-BGE_r1_1.3_1.5_s50_100.fasta.tsv  BGE00102_MGE-BGE_r1_1.3_1.5_s50_100.fasta  BGE00102_MGE-BGE_r1_1.3_1.5_s50_100.fasta.tsv  BGE00103_MGE-BGE_r1_1.3_1.5_s50_100.fasta  BGE00103_MGE-BGE_r1_1.3_1.5_s50_100.fasta.tsv  BGE00104_MGE-BGE_r1_1.3_1.5_s50_100.fasta  BGE00104_MGE-BGE_r1_1.3_1.5_s50_100.fasta.tsv  BGE00105_MGE-BGE_r1_1.3_1.5_s50_100.fasta  BGE00105_MGE-BGE_r1_1.3_1.5_s50_100.fasta.tsv  BGE00119_MGE-BGE_r1_1.3_1.5_s50_100.fasta  BGE00141_MGE-BGE_r1_1.3_1.5_s50_100.fasta  BGE00146_MGE-BGE_r_1_s_100.fas  (+565 more)
(+583 files in other folders)
